Fix the overflowing navbar
Added a position:fixed to the nav element,
And added overflow-x:hidden to body

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,7 @@ body {
   min-height: 100vh;
   box-sizing: border-box;
   background: #f1f1f1;
+  overflow-x: hidden;
 }
 
 a {
