--- a/src/resources/elements/nav-bar/nav-bar.css
+++ b/src/resources/elements/nav-bar/nav-bar.css
@@ -1,19 +1,27 @@
-nav ul {
-  margin: 0;
-  padding: 0 2rem;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+nav {
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100vw;
+  padding: 0 2rem;
+  box-sizing: border-box;
+
   box-shadow: 0 -.5rem 2rem rgba(0,0,0,0.03);
   background: white;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
+
   z-index: 79;
+}
+
+nav ul {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 nav ul li {
